# msfs_dashboard

./: CMakeLists.txt  LICENSE  README.md
include/: AttitudeIndicator.h  Compass.h  MainWindow.h  RpmIndicator.h  SimConnectClient.h
src/: AttitudeIndicator.cpp  Compass.cpp  MainWindow.cpp  RpmIndicator.cpp  SimConnectClient.cpp  main.cpp  mainwindow.ui
